# domain_overseer

./: .gitignore  README.md  pyproject.toml  Архитектура.txt  Запрос.txt  План разработки.txt
.github/workflows/: ci.yml
